Revision history for ocsreports
2.2
		* Migrate menus, urls and js config to XML files
		* Add new menu for computer sections
		* Add new menu for main sections
		* Add update methode

2.1.1
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1283089
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1277904
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1086324
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1260764
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1266229


2.1
		* add DEVICEID field on sim tables
		* add virtual machines info on snmp details
		* add news fields for printers
		* active alert messages on GUI for sadmin profil
		* fix LDAP bug https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/915301
		* fix bug on WOL
		* delete @ for ldap errors
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1019060. Delete registry cache where delete a key
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1023436 (cosmetic)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/612966 (lock/unlock GUI)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/806035 (ipdiscover)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1250428 (ldap case sensitive)
		* add osversion column for multisearch => https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/905544
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/772680 (ocsbase.sql admin/ladmin)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/806850 (ipdiscover id)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/807406 (ipdiscover sort percentage)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/931373 (administrative data search)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1240166 (bug on groups search)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1091580 (accountinfo checkboxes)