@@ -329,6 +329,14 @@ $l = $_SESSION['OCS']["LANGUAGE_FILE"];
 /*********************************************************gestion de l'authentification****************************************************/
 if (!isset($_SESSION['OCS']["loggeduser"])){
 	if (!AJAX && !((array_key_exists('HTTP_X_REQUESTED_WITH', $_SERVER) && strtolower($_SERVER['HTTP_X_REQUESTED_WITH']) == 'xmlhttprequest'))){
+		if(version_compare(PHP_VERSION, '5.3.7') >= 0){
+			$values=look_config_default_values('PASSWORD_VERSION');
+			$_SESSION['PASSWORD_VERSION'] = $values['ivalue']['PASSWORD_VERSION'];
+			$_SESSION['PASSWORD_ENCRYPTION'] =  $values['tvalue']['PASSWORD_VERSION'];
+		}else{
+			$_SESSION['PASSWORD_VERSION'] = false;
+			$_SESSION['PASSWORD_ENCRYPTION'] = false;
+		}
 		require_once(BACKEND.'AUTH/auth.php');
 	}else{
 		header($_SERVER["SERVER_PROTOCOL"]." 401 ". utf8_decode($l->g(1359)));
